--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server/server.js"
+    "start": "node ./src/server/server.js",
+    "build-dev": "webpack --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
