--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
