--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.2",
+    "dart-sass": "^1.25.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
-    "node-sass": "^5.0.0",
+    "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.24.4",
