--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "workbox-webpack-plugin": "^6.1.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
