--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Single Webpage trip planner App with front end and back end",
   "main": "./src/server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server/server.js",
+    "test": "jest",
+    "test-watch": "test:watch",
+    "start": "node ./src/server/start.js",
     "build-dev": "webpack --config webpack.dev.js",
     "build-prod": "webpack --config webpack.prod.js",
     "start-dev": "webpack serve --config webpack.dev.js --open"
@@ -29,11 +30,13 @@
     "dart-sass": "^1.25.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.9",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "supertest": "^6.1.3",
     "terser-webpack-plugin": "^5.1.1",
     "webpack": "^5.24.4",
     "webpack-cli": "^4.5.0",
