--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "timeunit": "^1.1.1"
+  },
+  "engines":{
+    "node": "14.15.4"
   }
 }
